--- a/axum_tokio_postgres/Cargo.toml
+++ b/axum_tokio_postgres/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0"
 uuid = { version = "1.0", features = ["serde"] }
 dotenv = "0.15"
 chrono = "0.4.38"
+anyhow = "1.0"
+thiserror = "1.0"
