--- a/axum_tokio_postgres/Cargo.toml
+++ b/axum_tokio_postgres/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5"
+axum = "0.7.5"
 tokio = { version = "1", features = ["full"] }
-tokio-postgres = { version="0.7", features = ["with-serde_json-1", "with-chrono-0_4"]}
+tokio-postgres = { version = "0.7", features = [
+    "with-serde_json-1",
+    "with-chrono-0_4",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.0", features = ["serde"] }
@@ -17,3 +20,4 @@ chrono = "0.4.38"
 anyhow = "1.0"
 thiserror = "1.0"
 sailfish = "0.8.3"
+tower-http = { version = "0.5.0", features = ["fs", "trace"] }
